<resources>
    <string name="app_name">Lab4</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_string">Edit</string>
    <string name="name_offer">Name</string>
    <string name="description_offer">Description</string>
    <string name="total_description">This is where all the description of the offer will be written.</string>
    <string name="price_offer">Price</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="hint_offer_name">Name of the offer</string>
    <string name="hint_price">Price</string>
    <string name="title_show_offer_details">Offer Details</string>
    <string name="title_show_reservation_details">Reservation Details</string>
    <string name="reservation_details_date">Date</string>
    <string name="hint_reservation_details_date">10/05/2016 at 17:50</string>
    <string name="offer_description_button">Offer Description</string>
    <string name="introduction_customer">Name for the reservation</string>
    <string name="customer_surname">Surname of the customer</string>
    <string name="customer_name">Name of the customer</string>
    <string name="customer_email">Email of the customer</string>
    <string name="customer_phone_number">Phone number of the customer</string>
    <string name="buy_button">Buy</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="hint_customer_surname">Write your surname</string>
    <string name="hint_customer_name">Write your name</string>
    <string name="hint_customer_email">Write your email address</string>
    <string name="hint_customer_phone_number">Write your phone number</string>
    <string name="hint_customer_password">Write your password</string>
    <string name="button_modify_password">Modify</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="stars_customer_password">********</string>
    <string name="offer_name">Offer name</string>
    <string name="description">Description</string>
    <string name="hint_description">Write the description of the offer</string>
    <string name="price_title">Price</string>
    <string name="available_quantity_title">Available Quantity</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="dialog_title">Add Photo</string>
    <string name="daily_offer_name">Offer of the Day</string>
    <string name="description_daily_offer">This offer is the offer of the day</string>
    <string name="price_number">5</string>
    <string name="available_quantity_number">100</string>
    <string name="title_activity_show_reservations">Reservations</string>
    <string name="title_activity_show_reservation_detail">Ordered Dishes</string>
    <string name="title_activity_show_offer">Offers</string>
    <string name="title_activity_daily_offer">Daily Offer</string>
    <string name="title_activity_formular_adding_an_offer">Add an Offer</string>
    <string name="title_activity_modify_offer">Modify my Offer</string>
    <string name="title_activity_restaurant_profile">Restaurant Profile</string>
    <string name="title_activity_edit_restaurant_profile">Edit Profile</string>
    <!-- login strings -->
    <string name="unknown_response">Unexpected onActivityResult response code 😐</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in 😓</string>
    <string name="sign_in_cancelled">Sign in cancelled 😔</string>
    <string name="sign_out_failed">Sign out failed 😨</string>
    <string name="login_title">OurAppName</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="delete_account_label">Delete account</string>
    <string name="delete_account_failed">Delete account failed 😨</string>
    <string name="loading">Loading…</string>

    <!-- reservations strings -->
    <string name="reservations_customer_details">Customer Details</string>
    <string name="reservations_status">Status</string>
    <string name="reservations_lunch_time">Lunch Time</string>
    <string name="reservations_tot_price">Total Price</string>
    <string name="reservations_delete_button">Delete</string>
    <string name="reservations_availability">Availability</string>
    <string name="reservations_price">Price</string>
    <string name="reservations_tel">Tel:&#160;</string>
    <string name="reservations_arrived">Arrived</string>
    <string name="reservations_confirmed">Confirmed</string>
    <string name="reservations_rejected">Rejected</string>
    <string name="reservations_completed">Completed</string>
    <string name="reservations_euro">€</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
