<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OwnerActivityAddOffer">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolbarTheme"
        app:popupTheme="@style/Theme.AppCompat">
    </android.support.v7.widget.Toolbar>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context=".ActivityAddOffer"
    android:padding="16dp"
    android:layout_below="@id/toolbar"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/daily_offer"
        android:layout_gravity="center_horizontal"
        android:id="@+id/add_offer_photo"
        android:onClick="onImageViewClick"/>
    <TextView
        android:id="@+id/add_offer_name_title"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer_name"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/add_offer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_offer_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/add_offer_description"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout2">
            <TextView
                android:id="@+id/add_offer_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/price_title"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="73dp"
                android:layout_gravity="center"
                android:id="@+id/add_offer_price"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout">
            <TextView
                android:id="@+id/add_offer_availability_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/available_quantity_title"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="79dp"
                android:layout_gravity="center"
                android:id="@+id/add_offer_availability"/>

        </LinearLayout>
        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:id="@+id/add_offer_save"
            android:layout_gravity="center"
            android:onClick="saveOfferData"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</LinearLayout>
</RelativeLayout>





