<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivityMain"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_reservation_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ToolbarTheme"
            app:popupTheme="@style/Theme.AppCompat">
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:id="@+id/reservation_details_image"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"

            android:layout_below="@id/toolbar_reservation_details"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/reservation_details_offer_name"
            android:hint="@string/hint_offer_name"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_below="@+id/reservation_details_image"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/reservation_details_price"
            android:hint="@string/hint_price"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_below="@+id/reservation_details_image"
            android:layout_alignParentRight="true"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/reservation_details_date"
            android:text="@string/reservation_details_date"
            android:textSize="22sp"
            android:textColor="@color/grey"
            android:layout_below="@+id/reservation_details_offer_name"
            />


        <TextView
            android:layout_below="@id/reservation_details_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/hint_reservation_details_date"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/reservation_details_date_time"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_below="@id/reservation_details_date_time"
            android:id="@+id/reservation_details_introduction_customer"
            android:text="@string/introduction_customer"
            android:textSize="22sp"
            android:textColor="@color/grey"/>

        <TextView
            android:layout_below="@id/reservation_details_introduction_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/customer_name"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/reservation_details_customer_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/restaurant_details"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/button_text_color"
            android:id="@+id/restaurant_details_button_restaurant"
            android:background="#009dff"
            android:onClick="goToRestaurantDescription"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/offer_description_button"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/button_text_color"
            android:id="@+id/offer_description_button"
            android:background="#009dff"
            android:onClick="goToOfferDescription"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>
</LinearLayout>
