<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivityMain"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_offer_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ToolbarTheme"
            app:popupTheme="@style/Theme.AppCompat">
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:id="@+id/offer_details_image"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:layout_below="@id/toolbar_offer_details"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:id="@+id/offer_details_offer_name"
            android:hint="@string/hint_offer_name"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_below="@id/offer_details_image"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:id="@+id/offer_details_price"
            android:hint="@string/hint_price"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_below="@+id/offer_details_image"
            android:layout_alignParentRight="true"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/offer_description"
            android:text="@string/description_offer"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/offer_details_offer_name"/>

        <TextView
            android:layout_below="@id/offer_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total_description"
            android:textSize="18sp"
            android:id="@+id/offer_details_description"
            android:outlineProvider="bounds"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/lightgrey"
            android:visibility="visible" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/restaurant_details"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/button_text_color"
            android:id="@+id/offer_details_button_restaurant"
            android:background="#009dff"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:onClick="goToRestaurantDescription"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/buy_button"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/button_text_color"
            android:id="@+id/button_buy"
            android:background="#009dff"
            android:onClick="showDateTimePicker"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />
        

    </RelativeLayout>
</LinearLayout>
