<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    android:paddingTop="4dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reservation_card"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/customer_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:paddingBottom="4dp"
                android:textSize="20sp"
                android:textColor="@color/dark_text_color"
                android:text="@string/reservations_customer_details"/>

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/customer_name_title"
                android:paddingRight="8dp"
                android:textSize="16sp"
                android:text="Name"/>
            <TextView
                android:id="@+id/customer_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_name_title"
                android:layout_toRightOf="@id/customer_name"
                android:textSize="16sp"
                android:text="Surname"/>
            <TextView
                android:id="@+id/reservation_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:textSize="20sp"
                android:textColor="@color/dark_text_color"
                android:text="@string/reservations_status"/>
            <TextView
                android:id="@+id/reservation_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reservation_status_title"
                android:layout_alignParentRight="true"
                android:textSize="16sp"
                android:text="status"/>
            <TextView
                android:id="@+id/customer_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_name"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:text="@string/reservations_tel"/>
            <TextView
                android:id="@+id/customer_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_name"
                android:layout_toRightOf="@id/customer_phone_text"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:text="Phone"/>
            <TextView
                android:id="@+id/customer_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_phone_text"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:text="This is the customer comment"/>
            <TextView
                android:id="@+id/lunch_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_comment"
                android:paddingTop="8dp"
                android:layout_alignParentLeft="true"
                android:textSize="20sp"
                android:textColor="@color/dark_text_color"
                android:text="@string/reservations_lunch_time"/>
            <TextView
                android:id="@+id/lunch_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lunch_time_title"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:text="hh:mm"/>
            <TextView
                android:id="@+id/reservation_tot_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_comment"
                android:paddingTop="8dp"
                android:layout_alignParentRight="true"
                android:textSize="20sp"
                android:textColor="@color/dark_text_color"
                android:text="@string/reservations_tot_price"/>
            <TextView
                android:id="@+id/reservation_tot_price_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reservation_tot_price_title"
                android:layout_alignParentRight="true"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:text="@string/reservations_euro"/>
            <TextView
                android:id="@+id/reservation_tot_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reservation_tot_price_title"
                android:layout_toLeftOf="@id/reservation_tot_price_symbol"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:text="price"/>
            <Button
                android:id="@+id/reservation_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/customer_comment"
                android:layout_marginTop="16dp"
                android:textColor="@color/button_text_color"
                android:text="@string/reservations_delete_button"/>



        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
