<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivityMain"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_offer_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ToolbarTheme"
            app:popupTheme="@style/Theme.AppCompat">
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/offer_details_image"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/chicken"
            android:layout_below="@id/toolbar_offer_details"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/offer_description"
            android:text="@string/description_offer"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/offer_details_image"/>

        <TextView
            android:layout_below="@id/offer_description"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total_description"
            android:textSize="18sp"
            android:id="@+id/offer_details_description"
            android:outlineProvider="bounds"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/lightgrey"
            android:visibility="visible" />



        <TextView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/restaurant_details"
            android:textAlignment="center"
            android:gravity="bottom"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/restaurant_paris"
            android:textColor="@color/button_text_color"
            android:id="@+id/offer_details_button_restaurant"

            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:onClick="goToRestaurantDescription"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@mipmap/circle"
            android:text="@string/buy_button"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/button_color"
            android:id="@+id/button_buy"
            android:clickable="true"
            android:onClick="showDateTimePicker"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />
        

    </RelativeLayout>
</LinearLayout>
